@startuml QuickRent_Diagram_A

title QuickRent — Part C\nClass Diagram (1 of 2): Patterns & Data Layer

hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<Singleton>> LightYellow
    BackgroundColor<<Repository>> LightPink
    BackgroundColor<<Strategy>> LightBlue
    BackgroundColor<<Factory>> LightGreen
    BackgroundColor<<Abstract>> WhiteSmoke
    BackgroundColor<<Model>> Wheat
    FontSize 9
    AttributeFontSize 8
}
skinparam packageFontSize 10
skinparam noteFontSize 8
skinparam nodesep 25
skinparam ranksep 35

' ── SINGLETON ──
package "<<Singleton>> Database" {
    class DatabaseConnection <<Singleton>> {
        -{static} instance: DatabaseConnection
        +{static} getInstance(): DatabaseConnection
        +connect(): Promise
        +isConnected(): Boolean
        +disconnect(): Promise
    }
    note right of DatabaseConnection
        **<<Singleton>>**
        One shared DB connection
        across the entire app.
    end note
}

' ── MODELS ──
package "Models — Domain Layer" {
    class User <<Model>> {
        -name: String
        -email: String
        -password: String
        -role: String
        -driverLicense: String
        -firebaseToken: String
    }
    class Vehicle <<Model>> {
        -vehicleType: String
        -pricePerDay: Number
        -availability: Boolean
        -licensePlate: String
        -location: Object
    }
    class Booking <<Model>> {
        -user: ObjectId
        -vehicle: ObjectId
        -startDate: Date
        -endDate: Date
        -status: String
    }
    class BookingRequest <<Model>> {
        -requestToken: String
        -priceQuote: Number
        -expiresAt: Date
        -status: String
    }
    class Transaction <<Model>> {
        -userId: ObjectId
        -bookingId: ObjectId
        -amount: Number
        -status: String
    }
    Booking --> User
    Booking --> Vehicle
    BookingRequest --> User
    BookingRequest --> Vehicle
    Transaction --> Booking
    note bottom of BookingRequest
        **TTL Lock**
        Auto-deleted after 15 min.
        Prevents double-bookings.
    end note
}

' ── REPOSITORY ──
package "<<Repository>> Data Access Layer" {
    abstract class BaseRepository <<Repository>> {
        +findAll(filter): Promise
        +findById(id): Promise
        +create(data): Promise
        +update(id, data): Promise
        +delete(id): Promise
        +count(filter): Promise
        +findWithPagination(f,page,limit): Promise
    }
    class UserRepository <<Repository>> {
        +findByEmail(email): Promise
        +findByEmailWithPassword(e): Promise
        +findByIdWithoutPassword(id): Promise
        +updateFirebaseToken(id,t): Promise
    }
    class VehicleRepository <<Repository>> {
        +findByLicensePlate(plate): Promise
        +findNearby(lat,lng,radius): Promise
    }
    class BookingRepository <<Repository>> {
        +findByUser(userId): Promise
        +checkConflicts(vId,s,e): Promise
    }
    class TransactionRepository <<Repository>> {
        +findByUserId(userId): Promise
        +findByProviderId(id): Promise
    }
    BaseRepository <|-- UserRepository
    BaseRepository <|-- VehicleRepository
    BaseRepository <|-- BookingRepository
    BaseRepository <|-- TransactionRepository
    note right of BaseRepository
        **<<Repository>>**
        Abstracts all DB ops.
        Enables mock-based
        unit testing.
    end note
}

' ── STRATEGY ──
package "<<Strategy>> Payment" {
    abstract class PaymentStrategy <<Abstract>> {
        +{abstract} processPayment(): Promise
        +{abstract} refundPayment(): Promise
        +{abstract} getPaymentStatus(): Promise
    }
    class StripePaymentStrategy <<Strategy>> {
        +processPayment(amount,cur,meta): Promise
        +refundPayment(paymentId,amt): Promise
        +getPaymentStatus(paymentId): Promise
    }
    class PaymentService {
        -strategy: PaymentStrategy
        +createPaymentIntent(amt,uid): Promise
        +refundPayment(id,amt): Promise
    }
    PaymentStrategy <|-- StripePaymentStrategy
    PaymentService o--> PaymentStrategy
    note bottom of PaymentStrategy
        **<<Strategy>>**
        Swap providers at runtime.
        Future: PayPalStrategy.
    end note
}

' ── FACTORY ──
package "<<Factory>> Notifications" {
    abstract class Notification <<Abstract>> {
        +{abstract} send(recipient,msg): Promise
    }
    class PushNotification <<Factory>> {
        +send(token, message): Promise
    }
    class EmailNotification <<Factory>> {
        +send(email, message): Promise
    }
    class SMSNotification <<Factory>> {
        +send(phone, message): Promise
    }
    class NotificationFactory <<Factory>> {
        +{static} createNotification(type): Notification
        +{static} getAvailableTypes(): String[]
    }
    Notification <|-- PushNotification
    Notification <|-- EmailNotification
    Notification <|-- SMSNotification
    NotificationFactory ..> PushNotification : creates
    NotificationFactory ..> EmailNotification : creates
    NotificationFactory ..> SMSNotification : creates
    note right of NotificationFactory
        **<<Factory>>**
        One new class to add
        a new channel.
    end note
}

DatabaseConnection ..> UserRepository : provides connection
DatabaseConnection ..> BookingRepository : provides connection

@enduml
